Fix anchor causing misalignment

--- a/layout/style/style.less
+++ b/layout/style/style.less
@@ -93,6 +93,7 @@ ul {
 .anchor {
 	opacity: 0;
 	margin-right: 5px;
+	margin-left: -22px;
 }
 
 *:hover > .anchor {
